Sscs 7960: Integration test of final version of webchat client (#997)
* SSCS-7960: Integrate with Antenna webchat prototype

--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -25,6 +25,7 @@ nodejs:
 
     POSTCODE_CHECKER_ALLOWED_RPCS: "birmingham,liverpool,sutton,leeds,newcastle,cardiff,glasgow,bradford"
     UV_THREADPOOL_SIZE: 64
+    FT_ANTENNA_WEBCHAT: false
 
   keyVaults:
     sscs:
