--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -27,6 +27,7 @@ nodejs:
     POSTCODE_CHECKER_ALLOWED_RPCS: "birmingham,liverpool,sutton,leeds,newcastle,cardiff,glasgow,bradford"
     UV_THREADPOOL_SIZE: 64
     FT_ANTENNA_WEBCHAT: false
+    FT_ALLOW_UC_HEARING_OPTIONS: false
 
   keyVaults:
     sscs:
