--- a/charts/sscs-tribunals-frontend/values.aat.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.aat.template.yaml
@@ -3,4 +3,4 @@ nodejs:
   ingressHost: ${SERVICE_FQDN}
   environment:
     FT_ANTENNA_WEBCHAT: false
-    FT_ALLOW_UC_HEARING_OPTIONS: true
+    FT_ALLOW_UC_HEARING_OPTIONS: false
