--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -7,6 +7,7 @@ nodejs:
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
     FT_ANTENNA_WEBCHAT: false
     FT_ALLOW_UC_HEARING_OPTIONS: true
+    FT_WELSH: "true"
   keyVaults:
     sscs:
       secrets:
