--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -15,6 +15,7 @@ nodejs:
 
     # This is currently disabled in prod, enabled all other environments
     CONTACT_US_WEB_FORM_ENABLED: false
+    MEDIA_FILES_NOT_ALLOWED_ENABLED: false
 
     # these are only enabled in prod
     # SERVICES_WEBCHAT_UUID:
