--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -28,6 +28,7 @@ nodejs:
     UV_THREADPOOL_SIZE: 64
     FT_ANTENNA_WEBCHAT: false
     FT_ALLOW_UC_HEARING_OPTIONS: false
+    FT_WELSH: true
 
   keyVaults:
     sscs:
