--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -9,6 +9,7 @@ nodejs:
     FT_ALLOW_UC_HEARING_OPTIONS: true
     FT_WELSH: true
     PCQ_ENABLED: true
+    MULTIPLE_DRAFTS_ENABLED: true
   keyVaults:
     sscs:
       secrets:
