--- a/package.json
+++ b/package.json
@@ -143,7 +143,8 @@
     "js-yaml": "3.13.1",
     "lodash": "^4.17.4",
     "minimist": "^1.2.5",
-    "electron": "^7.2.4",
-    "axios": "^0.21.1"
+    "electron": "^9.4.0",
+    "axios": "^0.21.1",
+    "node-notifier": "^8.0.1"
   }
 }
