--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -30,6 +30,7 @@ nodejs:
     FT_ANTENNA_WEBCHAT: false
     FT_ALLOW_UC_HEARING_OPTIONS: false
     FT_WELSH: true
+    ALLOW_DLA_ENABLED: true
 
   keyVaults:
     sscs:
