--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.5",
     "electron": "^9.4.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "elliptic": "^6.5.4"
   }
 }
