--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "minimist": "^1.2.5",
     "electron": "^9.4.0",
     "axios": "^0.21.1",
-    "elliptic": "^6.5.4"
+    "elliptic": "^6.5.4",
+    "ssri": "6.0.2"
   }
 }
