--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "test:evidence-upload": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run -c test/e2e/ --grep @evidence-upload --steps",
     "test:functional": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel --all -c test/e2e/ --grep @functional --steps --reporter mocha-multi",
     "test:fullfunctional": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel --all -c test/e2e/ --grep 'functional|fullFunctional' --steps --reporter mocha-multi",
-    "test:e2e-pages": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel pages -c test/e2e/ --steps --reporter mocha-multi",
+    "test:e2e-pages": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple pages -c test/e2e/ --steps --reporter mocha-multi",
     "test:functional:batch": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run -c test/e2e/ --grep @batch-$BATCH --steps",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
     "test:coverage": "cross-env NODE_PATH=. NODE_ENV=test istanbul cover _mocha 'test/unit/**/*.test.js' --dir test/unit/coverage/html",
-    "test:crossbrowser": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel ${BROWSER_GROUP:-'--all'} -c test/e2e/saucelabs.conf.js --grep @crossbrowser --steps --reporter mocha-multi --verbose",
+    "test:crossbrowser": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple ${BROWSER_GROUP:-'--all'} -c test/e2e/saucelabs.conf.js --grep @crossbrowser --steps --reporter mocha-multi --verbose",
     "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
     "sonar-scan": "sonar-scanner -Dsonar.projectName='SSCS :: Submit Your Appeal frontend' -Dsonar.projectKey='SSCSSYAF' -Dsonar.sources=. -Dsonar.exclusions=app.js,appConfigurations.js,app-insights.js,server.js,config/**,charts/**,**/healthcheck.js,steps/errors/duplicate-error/**,steps/pcq/createToken.js,infrastructure/**,node_modules/**,mocks/**,test/**,assets/**,dist/**,mochawesome-report/**,webpack/**,components/postcodeLookup/assets/**,steps/reasons-for-appealing/evidence-upload/EvidenceUpload.js,steps/check-your-appeal/CheckYourAppeal.js,views/components/web-chat.html -Dsonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info -Dsonar.cpd.exclusions=steps/**",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
@@ -110,7 +110,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-jq": "^0.0.9",
     "chokidar": "^3.0.1",
-    "codeceptjs": "^2.5.0",
+    "codeceptjs": "^2.6.11",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
     "istanbul": "^1.1.0-alpha.1",
@@ -128,7 +128,7 @@
     "portscanner": "^2.1.1",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.0.1",
-    "puppeteer": "^1.17.0",
+    "puppeteer": "^5.4.1",
     "rewire": "^4.0.1",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.0.0",
