--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
+    "superagent-retry-delay": "^2.6.2",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "uuid": "^8.2.0",
