--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -9,6 +9,10 @@ nodejs:
     FT_WELSH: true
     PCQ_ENABLED: true
     MULTIPLE_DRAFTS_ENABLED: true
+    TRIBUNALS_CASE_API_URL: http://sscs-tribunals-api-pr-1769.service.core-compute-preview.internal
+    UPLOAD_EVIDENCE_URL: http://sscs-tribunals-api-pr-1769.service.core-compute-preview.internal/evidence/upload
+    SERVICES_IDAM_LOGIN_URL: https://idam-web-public.aat.platform.hmcts.net/login
+    SERVICES_IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
   keyVaults:
     sscs:
       secrets:
