--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "webdriverio": "^4.14.4"
   },
   "resolutions": {
+    "redis": "^3.1.1",
     "assign-deep": "1.0.1",
     "braces": "^2.3.2",
     "eslint-utils": "^1.4.1",
