--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "cookies": "^0.7.3",
     "copy-webpack-plugin": "^6.0.0",
     "cross-env": "^5.1.3",
-    "css-loader": "^3.0.0",
+    "css-loader": "^5.2.4",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
@@ -92,7 +92,7 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.2.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
     "superagent-csrf": "^1.0.0",
@@ -148,6 +148,7 @@
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
-    "postcss": "^8.2.10"
+    "postcss": "^8.2.10",
+    "cssnano": "^5.0.2"
   }
 }
