--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "axios": "^0.21.1",
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
-    "url-parse": "^1.5.0"
+    "url-parse": "^1.5.0",
+    "browserslist": "4.16.5"
   }
 }
