update cookie banner

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
+    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#2.0.0",
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
     "cookies": "^0.7.3",
@@ -69,7 +70,7 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
-    "govuk-frontend": "^2.13.0",
+    "govuk-frontend": "^3.12.0",
     "graceful-fs": "^4.1.15",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
