--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
-    "browserslist": "4.16.5"
+    "browserslist": "4.16.5",
+    "ws": "7.4.6"
   }
 }
