--- a/package.json
+++ b/package.json
@@ -149,6 +149,9 @@
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
     "browserslist": "4.16.5",
-    "ws": "7.4.6"
+    "ws": "7.4.6",
+    "glob-parent": "^5.1.2",
+    "trim-newlines": "3.0.1",
+    "css-what": "5.0.1"
   }
 }
