--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "file-loader": "^4.0.0",
     "form-data": "^2.3.2",
     "formidable": "^1.2.1",
+    "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
     "govuk-frontend": "^2.13.0",
     "graceful-fs": "^4.1.15",
