--- a/charts/sscs-tribunals-frontend/Chart.yaml
+++ b/charts/sscs-tribunals-frontend/Chart.yaml
@@ -14,3 +14,7 @@ dependencies:
     version: 10.6.18
     repository: "https://charts.bitnami.com/bitnami"
     condition: redis.enabled
+  - name: idam-pr
+    version: ~2.1.0
+    repository: '@hmctspublic'
+    condition: idam-pr.enabled
