--- a/charts/sscs-tribunals-frontend/Chart.yaml
+++ b/charts/sscs-tribunals-frontend/Chart.yaml
@@ -3,7 +3,7 @@ name: sscs-tribunals-frontend
 home: https://github.com/hmcts/sscs-submit-your-appeal
 apiVersion: v2
 appVersion: "1.0"
-version: 0.2.19
+version: 0.2.20
 maintainers:
   - name: HMCTS SSCS Team
 dependencies:
@@ -14,3 +14,7 @@ dependencies:
     version: 10.6.18
     repository: "https://charts.bitnami.com/bitnami"
     condition: redis.enabled
+  - name: idam-pr
+    version: ~2.1.0
+    repository: '@hmctspublic'
+    condition: idam-pr.enabled
