--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -19,3 +19,9 @@ nodejs:
 
 redis:
   enabled: true
+
+idam-pr:
+  enabled: true
+  redirect_uris:
+    SSCS:
+      - https://${SERVICE_FQDN}/authenticated # this is the application callback URL where IDAM will send back the authentication code. SERVICE_FQDN is injected by Jenkins.
