--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "js-yaml": "^3.6.1",
     "jsdom": "^15.1.1",
     "libphonenumber-js": "^1.7.19",
+    "loading-spinner": "^1.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
