--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "formidable": "^1.2.1",
     "git-rev-sync": "^1.12.0",
     "govuk-frontend": "^2.13.0",
-    "spin": "^0.0.1",
     "graceful-fs": "^4.1.15",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
@@ -96,6 +95,8 @@
     "request-promise": "^4.2.4",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
+    "spin": "^0.0.1",
+    "spin.js": "^4.1.0",
     "superagent": "^6.1.0",
     "superagent-csrf": "^1.0.0",
     "superagent-retry-delay": "^2.6.2",
