--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
-    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#2.0.0",
+    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#3.0.0",
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
     "cookies": "^0.7.3",
@@ -70,13 +70,17 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
-    "govuk-frontend": "^3.12.0",
+    "govuk-elements-sass": "^3.1.3",
+    "govuk-frontend": "^3.11.0",
+    "govuk_template_jinja": "0.26.0",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "graceful-fs": "^4.1.15",
     "helmet": "^3.18.0",
     "html-entities": "^1.2.1",
     "http-status-codes": "^1.3.2",
     "ioredis": "^4.14.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.6.0",
     "jquery-modal": "^0.9.1",
     "js-base64": "^2.5.1",
     "js-yaml": "^3.6.1",
