--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "codeceptjs": "^2.6.11",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
