--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "codeceptjs": "^2.6.11",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
-    "istanbul": "^1.1.0-alpha.1",
+    "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
@@ -150,11 +150,6 @@
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
     "browserslist": "4.16.5",
-    "ws": "7.4.6",
-    "glob-parent": "^5.1.2",
-    "trim-newlines": "3.0.1",
-    "css-what": "5.0.1",
-    "normalize-url": "4.5.1",
-    "postcss": "7.0.36"
+    "ws": "7.4.6"
   }
 }
