--- a/package.json
+++ b/package.json
@@ -99,10 +99,10 @@
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "uuid": "^8.2.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-merge": "^4.2.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.3",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
@@ -118,7 +118,7 @@
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
-    "mochapack": "^1.1.1",
+    "mochapack": "^2.1.2",
     "mochawesome": "^4.0.1",
     "nightmare": "^3.0.2",
     "nightmare-upload": "^0.1.1",
@@ -150,6 +150,6 @@
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
     "browserslist": "4.16.5",
-    "ws": "7.4.6"
+    "glob-parent": "^5.1.2"
   }
 }
