--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.0",
     "browserslist": "4.16.5",
-    "glob-parent": "^5.1.2"
+    "glob-parent": "^5.1.2",
+    "tar": "^6.1.1"
   }
 }
