--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "url-parse": "^1.5.0",
     "browserslist": "4.16.5",
     "glob-parent": "^5.1.2",
-    "tar": "^6.1.1"
+    "tar": "^6.1.1",
+    "trim-newlines": "4.0.2"
   }
 }
