--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "browserslist": "4.16.5",
     "glob-parent": "^5.1.2",
     "tar": "^6.1.1",
-    "trim-newlines": "4.0.2"
+    "trim-newlines": "4.0.2",
+    "yargs-parser": "13.1.2"
   }
 }
