SSCS-9493 -  Remove old 8x8 webchat

--- a/charts/sscs-tribunals-frontend/values.aat.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.aat.template.yaml
@@ -2,7 +2,7 @@ nodejs:
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
   environment:
-    FT_ANTENNA_WEBCHAT: false
+    CONTACT_US_WEBCHAT_ENABLED: false
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
     FT_WELSH: true
     PCQ_ENABLED: true
