SSCS-9604:Web-chat for Pre-prod and prod

--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -23,6 +23,10 @@ nodejs:
     FT_WELSH: true
     ALLOW_DLA_ENABLED: true
 
+    #Added for new Webchat with Agent
+    WEBCHAT_URL: "webchat.ctsc.hmcts.net"
+    WEBCHAT_CLIENT_URL: "webchat-client.ctsc.hmcts.net"
+
   keyVaults:
     sscs:
       secrets:
