--- a/charts/sscs-tribunals-frontend/values.aat.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.aat.template.yaml
@@ -3,6 +3,9 @@ nodejs:
   ingressHost: ${SERVICE_FQDN}
   environment:
     CONTACT_US_WEBCHAT_ENABLED: false
+    #Added for new Webchat with Agent
+    WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
+    WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
     FT_WELSH: true
     PCQ_ENABLED: true
