--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -6,6 +6,9 @@ nodejs:
     APPINSIGHTS_ROLE_NAME: ${SERVICE_NAME}
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
     CONTACT_US_WEBCHAT_ENABLED: false
+    #Added for new Webchat with Agent
+    WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
+    WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
     FT_WELSH: true
     PCQ_ENABLED: true
   keyVaults:
