Bypass the strict cookie at lower env due to failing functional test (#1255)
* Bypass the strict cookie at lower env due to failing functional test

* Bypass the strict cookie at lower env due to failing functional test

--- a/charts/sscs-tribunals-frontend/values.aat.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.aat.template.yaml
@@ -2,6 +2,7 @@ nodejs:
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
   environment:
+    NODE_ENV: "aat"
     CONTACT_US_WEBCHAT_ENABLED: false
     #Added for new Webchat with Agent
     WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
