Draft Verify E2E Tests
Initial Draft Verify E2E Test
Updating Draft Verify Test
Refining the test
Using second API to get the required info
Finishing and clearing debugs
Rewording Scenario & Adding Welsh Version
Using assert for comparison
Simplifying test route
Checking correct language after sign in
Post sign in error fix
changing to tests to @fullFunctional

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "ecmaVersion": 2017
   },
   "rules": {
+	"linebreak-style": ["warn", "unix"],
     "no-process-env": "off",
     "multiline-ternary": ["error", "always-multiline"],
     "operator-linebreak": ["error", "after"],
