upgrade npm package

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "trim-newlines": "4.0.2",
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
-    "json-schema": "0.4.0"
+    "json-schema": "0.4.0",
+    "shelljs": "^0.8.5"
   }
 }
