--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "nanoid": "^3.1.31"
   }
 }
