--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.18.1",
-    "node-sass": "^7.0.0",
+    "node-sass": "^4.14.1",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -164,6 +164,8 @@
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
     "shelljs": "^0.8.5",
-    "nanoid": "^3.1.31"
+    "nanoid": "^3.1.31",
+    "cached-path-relative": "1.1.0",
+    "node-sass": "4.14.1"
   }
 }
