--- a/package.json
+++ b/package.json
@@ -164,8 +164,6 @@
     "ansi-regex": "^5.0.1",
     "json-schema": "0.4.0",
     "shelljs": "^0.8.5",
-    "nanoid": "^3.1.31",
-    "cached-path-relative": "1.1.0",
-    "node-sass": "4.14.1"
+    "nanoid": "^3.1.31"
   }
 }
