--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lint"
   ],
   "dependencies": {
+    "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
@@ -48,6 +49,8 @@
     "accessible-autocomplete": "^2.0.2",
     "applicationinsights": "^1.7.0",
     "applicationinsights-native-metrics": "^0.0.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
