--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -9,7 +9,7 @@ nodejs:
     CONTACT_US_WEBCHAT_ENABLED: false
     #Added for new Webchat with Agent
     WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
-    WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
+    WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net/chat-client/2"
     FT_WELSH: true
     PCQ_ENABLED: true
   keyVaults:
