--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lint"
   ],
   "dependencies": {
+    "5": "^0.0.1",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
@@ -71,8 +72,7 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
-    "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^3.11.0",
+    "govuk-frontend": "^4.0.1",
     "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
@@ -91,7 +91,6 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.18.1",
-    "node-sass": "^5.0.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -99,6 +98,7 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.4",
+    "sass": "^1.50.0",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
