--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.18.1",
     "node-gyp": "^9.0.0",
+    "node-sass": "^7.0.1",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
