sscs-10209 bump the package version

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
-    "moment": "^2.18.1",
+    "moment": "2.29.2",
     "node-sass": "^4.14.1",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
@@ -156,13 +156,13 @@
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.8",
-    "browserslist": "4.16.5",
+    "browserslist": "4.16.6",
     "glob-parent": "^5.1.2",
     "tar": "^6.1.9",
-    "trim-newlines": "4.0.2",
+    "trim-newlines": "^4.0.2",
     "set-value": "^4.1.0",
     "ansi-regex": "^5.0.1",
-    "json-schema": "0.4.0",
+    "json-schema": "^0.4.0",
     "shelljs": "^0.8.5",
     "nanoid": "^3.1.31"
   }
