--- a/package.json
+++ b/package.json
@@ -166,6 +166,6 @@
     "shelljs": "^0.8.5",
     "moment": "2.29.2",
     "nanoid": "^3.1.31",
-    "redis": "^3.1.1"
+    "connect-redis": "6.1.3"
   }
 }
