--- a/charts/sscs-tribunals-frontend/Chart.yaml
+++ b/charts/sscs-tribunals-frontend/Chart.yaml
@@ -15,6 +15,6 @@ dependencies:
     repository: "https://charts.bitnami.com/bitnami"
     condition: redis.enabled
   - name: idam-pr
-    version: ~2.1.0
+    version: 2.2.7
     repository: '@hmctspublic'
     condition: idam-pr.enabled
