--- a/charts/sscs-tribunals-frontend/Chart.yaml
+++ b/charts/sscs-tribunals-frontend/Chart.yaml
@@ -8,7 +8,7 @@ maintainers:
   - name: HMCTS SSCS Team
 dependencies:
   - name: nodejs
-    version: 2.4.1
+    version: ~2.4.2
     repository: '@hmctspublic'
   - name: redis
     version: 16.11.3
