--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "json-schema": "0.4.0",
     "shelljs": "^0.8.5",
     "nanoid": "^3.1.31",
-    "terser": "^4.8.1"
+    "terser": "^4.8.1",
+    "scss-tokenizer": "0.4.3"
   }
 }
