--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "jquery-modal": "^0.9.1",
     "js-base64": "^2.5.1",
     "js-yaml": "^3.6.1",
-    "jsdom": "^15.1.1",
+    "jsdom": "^16.5.0",
     "libphonenumber-js": "^1.7.19",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -166,6 +166,8 @@
     "json-schema": "0.4.0",
     "shelljs": "^0.8.5",
     "nanoid": "^3.1.31",
-    "terser": "^4.8.1"
+    "terser": "^4.8.1",
+    "redis": "3.1.1",
+    "scss-tokenizer": "0.4.3"
   }
 }
