--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
     "csurf": "^1.10.0",
-    "express": "^4.17.1",
-    "express-nunjucks": "^2.2.3",
+    "express": "^4.18.2",
+    "express-nunjucks": "^2.2.5",
     "express-static-gzip": "^1.1.3",
     "extends-classes": "^1.0.5",
     "file-loader": "^4.0.0",
@@ -86,18 +86,21 @@
     "js-yaml": "^3.6.1",
     "jsdom": "^16.5.0",
     "libphonenumber-js": "^1.7.19",
+    "loader-utils": "^3.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
     "node-sass": "^4.14.1",
-    "nunjucks": "^3.2.0",
+    "nunjucks": "^3.2.3",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
+    "qs": "^6.11.0",
+    "redis": "^3.1.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
