--- a/package.json
+++ b/package.json
@@ -86,12 +86,11 @@
     "js-yaml": "^3.6.1",
     "jsdom": "^16.5.0",
     "libphonenumber-js": "^1.7.19",
-    "loader-utils": "^3.2.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "nunjucks": "^3.2.3",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -122,8 +121,11 @@
     "chokidar": "^3.0.1",
     "codeceptjs": "^2.6.11",
     "cookie-parser": "^1.4.5",
+    "decode-uri-component": "0.4.1",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "loader-utils": "^3.2.1",
+    "minimatch": "^5.1.1",
     "mocha": "^6.1.4",
     "mocha-multi": "^1.1.0",
     "mocha-param": "^2.0.0",
