--- a/package.json
+++ b/package.json
@@ -168,6 +168,11 @@
     "terser": "^4.8.1",
     "scss-tokenizer": "0.4.3",
     "json5": "^2.2.2",
-    "qs": "^6.5.3"
+    "qs": "^6.5.3",
+    "flat": "^5.0.1",
+    "loader-utils": "^1.4.1",
+    "async": "^3.2.2",
+    "minimatch": "^3.0.5",
+    "redis": "^3.1.1"
   }
 }
