--- a/package.json
+++ b/package.json
@@ -166,6 +166,8 @@
     "shelljs": "^0.8.5",
     "nanoid": "^3.1.31",
     "terser": "^4.8.1",
-    "scss-tokenizer": "0.4.3"
+    "scss-tokenizer": "0.4.3",
+    "loader-utils": "^1.4.2",
+    "flat": "^5.0.1"
   }
 }
