--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
-    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager",
+    "cmc-cookies-manager": "github:hmcts/cmc-cookies-manager#3.0.2",
     "compression-webpack-plugin": "^5.0.0",
     "config": "^3.2.5",
     "cookies": "^0.7.3",
@@ -70,9 +70,9 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^3.0.2",
-    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
+    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -170,6 +170,7 @@
     "loader-utils": "^1.4.2",
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "redis": "^3.1.1"
   }
 }
