--- a/package.json
+++ b/package.json
@@ -169,7 +169,6 @@
     "loader-utils": "^1.4.2",
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
-    "lodash.template": "^4.5.0",
-    "redis": "^3.1.1"
+    "lodash.template": "^4.5.0"
   }
 }
