--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.0",
     "moment": "^2.29.4",
+    "node-sass": "^8.0.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
