--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.0",
     "moment": "^2.29.4",
-    "node-sass": "^8.0.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -98,6 +97,7 @@
     "postcss-loader": "^3.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.4",
+    "sass": "^1.58.3",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
