--- a/package.json
+++ b/package.json
@@ -38,11 +38,10 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "7.21.3",
     "@babel/preset-env": "^7.10.2",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
-    "@hmcts/one-per-page": "5.4.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/uk-bank-holidays": "^1.0.1",
     "accessible-autocomplete": "^2.0.2",
@@ -60,19 +59,21 @@
     "copy-webpack-plugin": "^6.4.1",
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
+    "css-minimizer-webpack-plugin": "4.2.2",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
     "express-static-gzip": "^1.1.3",
     "extends-classes": "^1.0.5",
-    "file-loader": "^4.0.0",
+    "file-loader": "6.2.0",
     "form-data": "^2.3.2",
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^3.0.2",
+    "got": "12.6.0",
+    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -80,10 +81,9 @@
     "html-entities": "^1.2.1",
     "http-status-codes": "^1.3.2",
     "ioredis": "^4.14.1",
-    "jquery": "^3.6.0",
+    "jquery": "3.6.4",
     "jquery-modal": "^0.9.1",
     "js-base64": "^2.5.1",
-    "js-yaml": "^3.6.1",
     "jsdom": "^16.5.0",
     "libphonenumber-js": "^1.7.19",
     "lodash": "^4.17.21",
@@ -92,20 +92,17 @@
     "moment": "^2.29.4",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "13.2.1",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
     "superagent-csrf": "^1.0.0",
-    "terser-webpack-plugin": "^5.3.6",
+    "terser-webpack-plugin": "5.3.7",
     "trim-newlines": "^4.0.0",
     "uuid": "^8.2.0",
-    "webpack": "^4.40.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "5.76.2",
+    "webpack-cli": "5.0.1",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
@@ -121,11 +118,11 @@
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
     "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.0",
+    "mocha-multi": "1.1.7",
     "mocha-param": "^2.0.0",
     "mochapack": "^2.1.2",
     "mochawesome": "^7.1.3",
-    "nightmare": "^2.8.0",
+    "nightmare": "3.0.2",
     "nightmare-upload": "^0.1.1",
     "nock": "^10.0.6",
     "node-dev": "^8.0.0",
@@ -147,7 +144,6 @@
     "assign-deep": "1.0.1",
     "braces": "^2.3.2",
     "eslint-utils": "^1.4.1",
-    "js-yaml": "3.13.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.6",
     "electron": "^9.4.0",
@@ -155,7 +151,7 @@
     "elliptic": "^6.5.4",
     "hosted-git-info": "^3.0.8",
     "url-parse": "^1.5.8",
-    "browserslist": "4.17.5",
+    "browserslist": "4.21.5",
     "glob-parent": "^5.1.2",
     "tar": "^6.1.9",
     "trim-newlines": "4.0.2",
