--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "loader-utils": "^1.4.2",
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "redis": "4.6.5"
   }
 }
