SSCS-11479 - Dependency update and Jenkins afterSuccess update

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.29.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^8.0.0",
     "nunjucks": "^3.2.0",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -126,7 +126,7 @@
     "mocha-param": "^2.0.0",
     "mochapack": "^2.1.2",
     "mochawesome": "^4.0.1",
-    "nightmare": "^3.0.2",
+    "nightmare": "2.10.0",
     "nightmare-upload": "^0.1.1",
     "nock": "^10.0.6",
     "node-dev": "^4.0.0",
