--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
+    "got": "^12.6.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
     "govuk_template_jinja": "0.26.0",
@@ -96,8 +97,6 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.4",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
@@ -166,6 +165,7 @@
     "shelljs": "^0.8.5",
     "nanoid": "^3.1.31",
     "terser": "^4.8.1",
-    "scss-tokenizer": "0.4.3"
+    "scss-tokenizer": "0.4.3",
+    "got": "12.6.0"
   }
 }
