--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
     "csurf": "^1.10.0",
+    "es5-ext": "^0.10.62",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
     "express-static-gzip": "^1.1.3",
@@ -97,6 +98,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.3",
     "postcss-loader": "^3.0.0",
+    "postinstall": "^0.8.0",
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "superagent": "^6.1.0",
