--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "formidable": "^1.2.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^1.12.0",
-    "got": "^12.6.0",
+    "got": "11.8.5",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
     "govuk_template_jinja": "0.26.0",
@@ -168,6 +168,6 @@
     "nanoid": "^3.1.31",
     "terser": "^4.8.1",
     "scss-tokenizer": "0.4.3",
-    "got": "11.0.2"
+    "got": "11.8.5"
   }
 }
