SSCS-11479 - updated package.json

--- a/package.json
+++ b/package.json
@@ -169,6 +169,8 @@
     "flat": "^5.0.1",
     "minimatch": "^3.0.5",
     "lodash.template": "^4.5.0",
-    "got": "12.6.0"
+    "got": "12.6.0",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
