SSCS-11479 - updated package.json

--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "core-js": "^3.29.1",
     "cross-env": "^5.1.3",
     "css-loader": "^3.0.0",
-    "css-minimizer-webpack-plugin": "4.2.2",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.3",
@@ -73,9 +72,9 @@
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "git-rev-sync": "^3.0.2",
+    "govuk_template_jinja": "0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "govuk-frontend": "^3.11.0",
-    "govuk_template_jinja": "0.26.0",
     "graceful-fs": "^4.1.15",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -119,6 +118,7 @@
     "chokidar": "^3.5.3",
     "codeceptjs": "^3.4.1",
     "cookie-parser": "^1.4.5",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha": "^5.0.0",
     "mocha": "^10.2.0",
