--- a/.nycrc
+++ b/.nycrc
@@ -4,7 +4,7 @@
     "appConfigurations.js",
     "app-insights.js",
     "server.js",
-    "gulpfile.js",
+    "gulpfile.babel.js",
     "config/**",
     "charts/**",
     "**/healthcheck.js",
