upgrade for yarn from v1 to v3

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ evidence.txt
 package-lock.json
 *.iml
 cookie-banner/
+
+# Yarn 3 files
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
