--- a/package.json
+++ b/package.json
@@ -173,5 +173,6 @@
     "json5": "^1.0.2",
     "decode-uri-component": "^0.2.1",
     "minimatch": "^3.0.5"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
