Add secrets from azure KV to app

--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -21,6 +21,7 @@ nodejs:
         - postcode-lookup-token
         - AppInsightsInstrumentationKey
         - pcq-token-key
+        - server-key
 
 redis:
   enabled: true
