Add secrets from azure KV to app

--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -37,6 +37,7 @@ nodejs:
         - AppInsightsInstrumentationKey
         - pcq-token-key
         - server-key
+        - server-certificate
 
 
 redis:
