--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -22,6 +22,7 @@ nodejs:
         - AppInsightsInstrumentationKey
         - pcq-token-key
         - server-key
+        - server-certificate
 
 redis:
   enabled: true
