SSCSCI-9: update sonar exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,25 @@ sonar.language=typescript
 sonar.sources=.
 sonar.cpd.exclusions=steps/**
 sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
-sonar.exclusions=app.js,appConfigurations.js,app-insights.js,server.js,gulpfile.js,config/**,charts/**,**/healthcheck.js,steps/errors/duplicate-error/**,steps/pcq/createToken.js,infrastructure/**,node_modules/**,mocks/**,test/**,assets/**,dist/**,cookie-banner/**,mochawesome-report/**,webpack/**,components/postcodeLookup/assets/**,steps/reasons-for-appealing/evidence-upload/EvidenceUpload.js,steps/check-your-appeal/CheckYourAppeal.js,views/components/web-chat.html,Dockerfile
+sonar.exclusions=app.js,\
+  appConfigurations.js,\
+  app-insights.js,\
+  server.js,\
+  start-local-dev-server.js,\
+  gulpfile.js,\
+  config/**,\
+  charts/**,\
+  **/healthcheck.js,\
+  steps/errors/duplicate-error/**,\
+  steps/pcq/createToken.js,\
+  infrastructure/**,\
+  node_modules/**,\
+  mocks/**,test/**,\
+  assets/**,\
+  dist/**,\
+  cookie-banner/**,\
+  mochawesome-report/**,\
+  webpack/**,\
+  components/postcodeLookup/assets/**,\
+  views/components/web-chat.html,\
+  Dockerfile
