SSCSCI-9: update sonar exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.exclusions=app.js,\
   appConfigurations.js,\
   app-insights.js,\
   server.js,\
-  start-local-dev-server.js,\
+  services/start-local-dev-server.js,\
   gulpfile.js,\
   config/**,\
   charts/**,\
@@ -24,5 +24,6 @@ sonar.exclusions=app.js,\
   mochawesome-report/**,\
   webpack/**,\
   components/postcodeLookup/assets/**,\
+  steps/check-your-appeal/CheckYourAppeal.js,\
   views/components/web-chat.html,\
   Dockerfile
