SSCSCI-499: linking up repos for preview

--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -15,6 +15,8 @@ nodejs:
     WEBCHAT_OPENING_TIME_8_5: true
     FT_WELSH: true
     PCQ_ENABLED: true
+    TRIBUNALS_CASE_API_URL: http://sscs-tribunals-api-pr-3745.preview.platform.hmcts.net
+    UPLOAD_EVIDENCE_URL: http://sscs-tribunals-api-pr-3745.preview.platform.hmcts.net/evidence/upload
   keyVaults:
     sscs:
       secrets:
