Added format-v4-audit.js to sonar exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,4 +26,5 @@ sonar.exclusions=app.js,\
   components/postcodeLookup/assets/**,\
   steps/check-your-appeal/CheckYourAppeal.js,\
   views/components/web-chat.html,\
-  Dockerfile
+  Dockerfile,\
+  format-v4-audit.js
