Split webpack configuration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --config ./webpack/webpack.prod.js",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js",
     "dev": "./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
     "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node --inspect server.js",
     "setup": "exit 0",
@@ -69,6 +69,7 @@
     "graceful-fs": "^4.2.11",
     "helmet": "^7.0.0",
     "html-entities": "^2.4.0",
+    "html-webpack-plugin": "^5.6.0",
     "http-status-codes": "^2.2.0",
     "jquery": "^3.7.1",
     "jquery-modal": "^0.9.2",
@@ -85,6 +86,7 @@
     "redis": "^4.6.8",
     "sass": "^1.66.1",
     "sass-loader": "^16.0.0",
+    "style-loader": "^4.0.0",
     "superagent": "^8.1.2",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^5.3.10",
